<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_transactions"
        android:icon="@drawable/ic_transaction"
        android:title="@string/nav_transactions" />

    <item
        android:id="@+id/nav_scan"
        android:icon="@drawable/ic_scan"
        android:title="@string/ui_scan" />

    <item
        android:id="@+id/nav_budget"
        android:icon="@drawable/ic_categories"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/ic_budget"
        android:title="@string/ui_thong_ke" />

</menu>
